src/app/voting/crproposalvoting/pages/suggestion-detail/suggestion-detail.scss
@import "src/app/voting/crproposalvoting/root.scss";

ion-grid {
    padding: 0;

    ion-card {
        margin: 15px;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        border-radius: 5px;
        box-shadow: 0 0.1px 1px 0 rgba(0, 0, 0, 0.16);
        background-color: #ffffff;
        padding: 20px 30px;

        ion-card-title {
            font-size: 20px;
            font-weight: 600;
            text-align: center;
            word-break: break-all;
            letter-spacing: -0.5px;

            span {
                font-size: 15px;
                font-weight: 500;
            }
        }

        ion-card-subtitle {
            font-size: 12px;
            font-weight: 600;
            color: black;
            text-align: center;
            text-transform: none;
            padding: 10px 0 5px;
        }

        p {
            margin: 0;
            font-weight: 700;
            font-size: 10px;
            letter-spacing: 0.9px;
            color: #666666;
        }

        .signed {
            color: #ffc409;
        }

        .proposed {
            color: #2dd36f;
        }

        .unsigned {
            color: #f04141;
        }
    }

    .section-row {
        box-shadow: 0 0.1px 1px 0 rgba(0, 0, 0, 0.16);
        background-color: #ffffff;
        padding: 10px 10px 10px 22.5px;
        margin-bottom: 2px;

        ion-col {
            display: flex;
            justify-content: space-between;
            align-items: center;

            h1 {
                margin: 0;
                font-size: 14px;
                font-weight: 600;
                line-height: 1.46;
            }

            .rotate {
                transform: rotate(-180deg);
            }
        }

        .details-col {
            padding-top: 0;

            .item {
                margin: 0;
                width: 100%;
            }

            .marked {
                font-weight: 400;
                font-size: 12px;
                white-space: pre-wrap;
                word-wrap: break-word;
                font-family: "Inter" !important;
            }
        }

        h5 {
            width: 100%;
            font-size: 12px;
            display: block;
        }

        h4 {
            width: 100%;
            font-size: 14px;
            display: block;
        }
    }

    .tab-container {
        margin: 15px;
        border-radius: 5px;
        background: #ececf3;
        display: flex;
        justify-content: space-around;
        align-items: center;

        .tab {
            padding: 12px 6px;
            width: 32%;
            display: flex;
            justify-content: center;
            align-items: center;

            p {
                margin: 0;
                font-size: 14px;
                font-weight: 600;
                letter-spacing: 1.05px;
                text-align: center;
                color: #8889b1;

                span {
                    font-weight: 500;
                    font-size: 10px;
                }
            }
        }

        .right-tab {
            width: 36%;
        }

        .tab-active {
            background: #565bdb;
            border-radius: 5px;
            transform: scale(1.1);
            box-shadow: 0px 15px 25px 0 #d9dbff;

            p {
                color: #ffffff;
                font-weight: 800;
            }
        }
    }
}

.milestone-container {
    display: flex;
    align-items: stretch;
    padding-top: 0px;

    .vertical-line-container {
        padding-top: 22px;
        width: 20px;
        display: flex;
        justify-content: center;
    }

    .vertical-line-container .inner {
        width: 2px;
        background-color: #7ab400;
    }

    .content {
        width: 100%;
        padding-left: 10px;
    }

    .content .entry {
        width: 100%;
        position: relative;
        margin-bottom: 10px;
        display: flex;
        align-items: flex-start;
    }

    .content .entry .dot {
        margin-top: 10px;
        width: 12px;
        height: 12px;
        border: solid 1px #7ab400;
        border-radius: 50%;
        background-color: white;
        position: absolute;
        left: -25px;
        z-index: 10;
    }

    .content .entry .marker {
        margin-top: 10px;
        padding-top: 28px;
        width: 10px;
        height: 100%;
        background-color: white;
        position: absolute;
        left: -25px;
        z-index: 5;
    }

    .content .entry .stage {
        font-size: 14px;
        font-weight: bold;
    }

    .milestone-timestamp {
        font-size: 14px;
    }

    .milestone-goal {
        font-size: 12px;
        white-space: normal;
    }
}

.budget-container {
    #budget-list {
        padding: 0 0;
        width: 100%;
        height: 152px;
        display: flex;
        flex-wrap: wrap;
        overflow-x: auto;
        overflow-y: hidden;
        white-space: nowrap;
        flex-direction: column;
        list-style: none;

        #budget {
            margin-top: 0;
            padding: 10px 26px;
            height: 152px;
            width: 237px;
            display: inline-block;
            background-color: #f6f6f6;

            p {
                font-size: 14px;
                font-weight: normal;
                margin-bottom: 4px;
            }

            .number {
                margin-left: -16px;
                display: inline-block;
                width: 16px;
                font-weight: bold;
            }

            .amount {
                font-weight: bold;
                margin-top: 8px;
                margin-bottom: 8px;
            }

            .stage {
                color: #7ab400;
            }

            .payment-criteria {
                height: 100%;
                font-size: 12px;
                white-space: normal;
            }
        }

        .space {
            width: 12px;
            display: inline-block;
        }
    }
}

.implementation-team {
    #img-col {
        margin-top: 10px;
        display: flex;
        align-items: flex-start;

        .avatar {
            width: 24px;
            height: 24px;
        }
    }

    .implementation {
        margin-top: 0;
        padding-top: 0;

        h4 {
            margin: 10px;
        }

        h5 {
            margin: 10px;
        }
    }
}

.receive-address {
    div {
        width: 100%;
        font-size: 12px;
        word-wrap: break-word;
    }

    img {
        width: 20px;
        height: 20px;
    }
}


.original-url {
    a {
        width: 100%;
        color: #8052FF;
    }

    a:active {
        color: #428cff;
    }

    img {
        width: 20px;
        height: 20px;
    }
}

.darkContainer {
    ion-card {
        color: white;
        background: #212021;
        box-shadow: none;

        ion-card-title,
        ion-card-subtitle {
            color: #ffffff;
        }
    }

    .section-row {
        background: #212021;
        box-shadow: none;
    }

    .tab-container {
        background: #212021;
        box-shadow: none;

        .tab {
            p {
                color: #666666;
            }
        }

        .tab-active {
            box-shadow: 0px 0px 1px #000000e2;
            background: #363636;

            p {
                color: #ffffff;
            }
        }
    }

    .milestone-container {
        .vertical-line-container .inner {
            background: #f9f586;
        }

        .content .entry .dot {
            border: solid 1px #96fbc4;
            background-color: #212021;
        }

        .content .entry .marker {
            background-color: #212021;
        }
    }

    .budget-container {
        #budget-list {
            #budget {
                background-color: #2f2d2f;
                p {
                    color: white;
                }

                .stage {
                    color: #96FBC4;
                }
            }
        }
    }

    .original-url {
        a {
            color: #B79DFF;
        }
    }
}

.invisible {
    visibility: hidden;
}

